complete responsive design

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <section class="header-background">
         <div class="nav-container">
             <div class="navbar-logo">
-                <img src="/"/>
+                <img src="./images/logo-2.png" alt="logo"/>
+                <h1>ExpressVPN</h1>
             </div>
             <div class="navbar-link">
                 <span></span>
@@ -24,9 +25,90 @@
                 <h2>THE VPN thats just works</h2>
             </span>
             <span class="header-intro">
-                <h4>Go further with the #1 trusted leader in VPN</h4>
+                <p>Go further with the #1 trusted leader in VPN</p>
             </span>
             <button class="btn">Get ExpressVPN</button>
+        </div>
+    </section>
+    <section class="secure-acess-section">
+        <div class="secure-acess-container">
+        <div class="secure-access-img">
+            <ing src="./images/img-3.png" alt="access-img"/>
+        </div>
+        <div class="secure-access-text">
+            <h2>Secure access, Worldwide</h2>
+            <p>Connect relatively from anywhere,to anywhere.Our network or high-speed servers across 84 country put you in comtrol.</p>
+            <button class="btn">Get ExpressVPN</button>
+        </div>
+        </div>
+    </section>
+    <section class="safer-internet-section">
+        <div class="safer-internet-container">
+            <div class="safer-internet-text">
+                <h2>One click to a safer internet</h2>
+                <p>Going onliine doesn't have to mean being exposed, Wherether you are shopping from ypur desk or just connecting from a cafe.Keep your information more private and secure.</p>
+            </div>
+            <div class="safer-internet-img">
+                <img src="./images/img-2.png" alt="safer-image"/>
+            </div>
+        </div>
+    </section>
+    <section class="use-express-section">
+        <div class="use-express-container">
+            <div class="use-express-img">
+                <img src="./images/img-3.png" alt="use-express"/>
+            </div>
+            <div class="use-express-text">
+                <h2>Use ExpressVPN on every machine</h2>
+                <p>Phone, tablet computer do matter where you are or what devices ypu're using, a single ExpressVPN subscribsion has not been covered.</p>
+                <button class="btn">Get ExpressVPN</button>
+            </div>
+        </div>
+    </section>
+    <section calss="advantage-section">
+        <div class="advantages-container">
+            <div class="strong-protection-container">
+                <img src="./images/img-4.png"/>
+                <h2>Stronger data protection</h2>
+                <p>Take charge of your online privacy and secure with test-in-class encryption.</p>
+            </div>
+            <div class="Work seamlessly-container">
+                <img src="./images/img-5.png"/>
+                <h2>Work seamlessly everywhere</h2>
+                <p>Experiances the internet the way it meant to be.On the go or on your couch.</p>
+            </div>
+            <div class="lightening-quick-section">
+                <img src="./images/img-6.png" alt="quick-connectivity"/>
+                <h2>Lightening-quick connectivity</h2>
+                <p>Our VPN network is build for speed, powered by next-generation technology.</p>
+            </div>
+        </div>
+        <div class="more-adv-link">
+            <a href="/">see more advantages</a>
+        </div>
+    </section>
+    <section class="footer-section">
+        <div class="footer-container">
+            <div class="footer-info">
+                <h2>Ultra-fast server around the globe</h2>
+            </div>
+            <div class="server-position">
+                <div class="location">
+                    <span>160</span>
+                    <span>location</span>
+                </div>
+                <div class="country">
+                    <span>94</span>
+                    <span>country</span>
+                </div>
+                <div class="bandwidth">
+                    <span></span>
+                    <span>unlimited bandwidth</span>
+                </div>
+            </div>
+            <div class="server-position-link">
+                <a href="/">See our full list of server location</a>
+            </div>
         </div>
     </section>
 </section>
